Fix wordwrap changing when scrollbar appears.

--- a/src/app/src/sass/main.scss
+++ b/src/app/src/sass/main.scss
@@ -116,6 +116,7 @@ a:hover {
 
   &--open {
     overflow-y: scroll;
+    padding: 8px 0 8px 4px;
     background: rgba(0, 0, 0, 0.3);
 
     .messages__message {
